--- a/website/src/tailwind.css
+++ b/website/src/tailwind.css
@@ -1,7 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer base, starlight, theme, components, utilities;
 
+@import '@astrojs/starlight-tailwind';
+@import 'tailwindcss/theme.css' layer(theme);
+@import 'tailwindcss/utilities.css' layer(utilities);
+
+/*
+Add additional Tailwind styles to this file:
+https://tailwindcss.com/docs/adding-custom-styles#using-custom-css
+*/
 .link-no-deco {
   @apply no-underline visited:text-[var(--sl-color-gray-2)] text-[var(--sl-color-gray-2)]
 }
